@@ -4,6 +4,7 @@ export(registerDoFuture)
 importFrom(foreach,getErrorIndex)
 importFrom(foreach,getErrorValue)
 importFrom(foreach,getResult)
+importFrom(foreach,getexports)
 importFrom(foreach,makeAccum)
 importFrom(foreach,setDoPar)
 importFrom(future,future)
@@ -11,6 +12,7 @@ importFrom(future,getGlobalsAndPackages)
 importFrom(future,nbrOfWorkers)
 importFrom(future,resolve)
 importFrom(future,value)
+importFrom(globals,findGlobals)
 importFrom(iterators,iter)
 importFrom(parallel,splitIndices)
 importFrom(utils,capture.output)
